--- a/views/hr/admin_lvl.jade
+++ b/views/hr/admin_lvl.jade
@@ -57,9 +57,9 @@ html
                         while (testV < 3) {
                         if (!pass1) 
                         history.go(-1);
-                        if (pass1.toLowerCase() == "letmein") {
+                        if (pass1.toLowerCase() == "adminz") {
                         //- alert('You Got it Right!');
-                        window.open('hradmin');
+                        window.open('hradmin_lvl');
                         break;
                         } 
                         testV+=1;
