--- a/views/hr/tragiai.jade
+++ b/views/hr/tragiai.jade
@@ -4,6 +4,14 @@ html
         meta(http-equiv='Content-type', content='text/html; charset=utf-8')
         meta(name='viewport', content='width=device-width,initial-scale=1')
         title 2018
+        style(type='text/css')
+            body {
+            padding-top: 60px;
+            padding-bottom: 40px;
+            }
+            .sidebar-nav {
+            padding: 9px 0;
+            }
         link(rel='shortcut icon', type='image/png', href='/media/images/favicon.png')
         //link(rel='alternate', type='application/rss+xml', title='RSS 2.0', href='http://www.datatables.net/rss.xml')
         link(href='/css/bootstrap.css', rel='stylesheet')
@@ -41,6 +49,18 @@ html
             `,'#testd3');
             }
     body.wide.comments.example
+        .navbar.navbar-inverse.navbar-fixed-top
+          .navbar-inner
+            .container-fluid
+              a.btn.btn-navbar(data-toggle='collapse', data-target='.nav-collapse')
+                span.icon-bar
+                span.icon-bar
+                span.icon-bar
+              a.brand(href='/party2018') PARTY2018
+              .nav-collapse.collapse
+                  ul.nav
+                  li.active
+                    a(href='/party2018') HOME
         //- button.btn.btn-primary(type="submit",onclick="refresh();") RefeshData
         //- input(type="text", placehoder="Mã Nhân Viên" ) Nhập mã
         //- button.btn.btn-primary(type="submit", onclick="getbyDemand();") Scan Mã nhân viên sau khi nhận giải
