--- a/views/template/sql2pivot.jade
+++ b/views/template/sql2pivot.jade
@@ -126,6 +126,7 @@ select#server
  option(value="vnmltme-vkhang") vnmltme-vkhang
  option(value="vnmacsdb") vnmacsdb
  option(value="vnmacsrpt2") vnmacsrpt2
+ option(value="vnmsrv601") vnmsrv601
  option(value="smta") SMTA
 P THEN WRITE QUERY
 input#query(type="text", placeholder="SELECT * FROM [DB].DBO.TESTDAT")
